--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "rxjs-microstore",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "350b / 650b RxJS state with transformation and filtering options and strict typing for manage your state",
   "main": "dist/index.js",
-  "browser": "dist/microstore.min.js",
+  "browser": "dist/rxjs-microstore.min.js",
   "files": [
     "dist"
   ],
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ivkan/microstore.git"
+    "url": "git+https://github.com/ivkan/rxjs-microstore.git"
   },
   "keywords": [
     "typescript",
@@ -33,9 +33,9 @@
   "author": "Ivan Kalashnik (ivkan)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ivkan/microstore/issues"
+    "url": "https://github.com/ivkan/rxjs-microstore/issues"
   },
-  "homepage": "https://github.com/ivkan/microstore#readme",
+  "homepage": "https://github.com/ivkan/rxjs-microstore#readme",
   "dependencies": {
     "rxjs": "^6.6.3"
   },
